--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <h1 class="display-3">Welcome!</h1>
   <p class="lead">Please input all the required data in the following section: </p>
   <hr class="my-4">
-  <form>
+  <form method="post" enctype="multipart/form-data">
   <fieldset>
     <div class="form-group">
       <label for="vehicleValue">Vehicle value</label>
@@ -29,12 +29,12 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="dateOfBirth">Vehicle value</label>
+      <label for="dateOfBirth">Date of birth</label>
       <input type="date" class="form-control" id="dateOfBirth" placeholder="Enter your date of birth">
       <small id="dobHelp" class="form-text text-muted">The format should be Day/Month/Year</small>
     </div>
     <div class="form-group">
-      <label for="penaltyPointsValue">Vehicle value</label>
+      <label for="penaltyPointsValue">Penalty Points</label>
       <input type="number" class="form-control" id="penaltyPointsValue" placeholder="Enter your penalty points">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
