--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <h3>Car insurance quotes</h3>
+  <a href="/">
+    <h3>Car insurance quotes</h3>
+  </a>
 </nav>
 
 <div class="jumbotron">
@@ -18,24 +20,27 @@
   <fieldset>
     <div class="form-group">
       <label for="vehicleValue">Vehicle value</label>
-      <input type="number" class="form-control" id="vehicleValue" placeholder="Enter vehicle value" name="vehicleValue">
+      <input type="number" class="form-control" id="vehicleValue" placeholder="Enter vehicle value" name="vehicleValue"
+      required>
       <small id="valueHelp" class="form-text text-muted">The value shall be inputted in euros</small>
     </div>
     <div class="form-group">
       <label for="selectCover">Select cover type</label>
-      <select class="form-control" id="selectCover" name="coverType">
+      <select class="form-control" id="selectCover" name="coverType" required>
         <option>Comprehensive</option>
         <option>Third party</option>
       </select>
     </div>
     <div class="form-group">
       <label for="dateOfBirth">Date of birth</label>
-      <input type="date" class="form-control" id="dateOfBirth" placeholder="Enter your date of birth" name="dateOfBirth">
-      <small id="dobHelp" class="form-text text-muted">The format should be Day/Month/Year</small>
+      <input type="date" class="form-control" id="dateOfBirth" placeholder="Enter your date of birth" name="dateOfBirth"
+      required>
+      <small id="dobHelp" class="form-text text-muted">The format should be Month/Day/Year</small>
     </div>
     <div class="form-group">
       <label for="penaltyPointsValue">Penalty Points</label>
-      <input type="number" class="form-control" id="penaltyPointsValue" placeholder="Enter your penalty points" name="penaltyPoints">
+      <input type="number" class="form-control" id="penaltyPointsValue" placeholder="Enter your penalty points"
+             name="penaltyPoints" required>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </fieldset>
