refactored code and fixed minor bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     <div class="form-group">
       <label for="penaltyPointsValue">Penalty Points</label>
       <input type="number" class="form-control" id="penaltyPointsValue" placeholder="Enter your penalty points"
-             name="penaltyPoints" required>
+             name="penaltyPoints" min="0" required>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </fieldset>
